# causal-data-quality-auditor

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/: pull_request_template.md
docs/assets/: markdown_report_sample.md
docs/plans/: 2026-03-10-arquitectura-y-mvp.md
dqa/: engine.py
dqa/adapters/bayesian/: pymc_analyzer.py
dqa/adapters/readers/: polars_reader.py
dqa/adapters/reporters/: markdown_reporter.py  rich_reporter.py
dqa/analysis/: classical.py  information.py  schema.py
dqa/cli/: main.py
dqa/domain/: models.py  ports.py
examples/: README.md  generate_fixtures.py  production_drifted.parquet  production_stable.parquet  reference.csv  reference.parquet
tests/: conftest.py  test_cli.py  test_engine.py
tests/adapters/: test_bayesian.py  test_markdown_reporter.py  test_polars_reader.py
tests/analysis/: test_classical.py  test_information.py  test_schema.py
tests/domain/: test_models.py
